# drone_simulatie

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
interface/: camera.py  heatmap.py  hud.py  renderer.py
piloot/: interface.py  waypoints.py
simulatie/: clock.py  config.py  simulation.py  world.py
simulatie/algoritmen/: flocking.py  formaties.py  pathfinding.py
simulatie/entities/: base_entity.py  drone.py  npc.py
simulatie/sensoren/: fusie.py  proximity.py  sensor.py
tests/: test_drone.py  test_flocking.py  test_heatmap.py  test_pathfinding.py  test_sensor_fusie.py  test_waypoints.py  test_world.py
tests/integratie/: test_simulatie_loop.py
